Pequeno ajuste na referencia de seção no CSS

--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ p {
   height: 50px;
 }
 
-#hero {
+#sifc {
   background-image: url(img/hero.jpg);
   background-position: center;
   background-size: cover;
